<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/encrypt_xor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encrypt_xor"
            android:textSize="20sp" />

        <Button
            android:id="@+id/decrypt_xor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/decrypt_xor"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/encrypt_aes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encrypt_aes"
            android:textSize="20sp" />

        <Button
            android:id="@+id/decrypt_aes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/decrypt_aes"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/encrypt_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encrypt_des"
            android:textSize="20sp" />

        <Button
            android:id="@+id/decrypt_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/decrypt_des"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/encrypt_desede"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encrypt_desede"
            android:textSize="20sp" />

        <Button
            android:id="@+id/decrypt_desede"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/decrypt_desede"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/encrypt_md5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encrypt_md5"
            android:textSize="20sp" />

        <Button
            android:id="@+id/encrypt_sha1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/encrypt_sha1"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/encrypt_rsa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encrypt_rsa"
            android:textSize="20sp" />

        <Button
            android:id="@+id/decrypt_rsa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/decrypt_rsa"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/operation_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/before_operation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/after_operation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>